# ms-messenger

./: .env.access_service.example  .env.example  .env.message_service.example  .env.notification_service.example  .gitignore  LICENSE  Makefile  README.md
access_service/: .env.dist  Dockerfile  pyproject.toml
access_service/.config/app/: config.toml
access_service/docker_compose/: access_service.yaml  storage.yaml
access_service/src/access_service/application/dto/: access_token.py  refresh_token.py  user.py  verification_token.py
access_service/src/access_service/application/exceptions/: password_hasher.py  user.py
access_service/src/access_service/application/usecases/: authorize.py  create_user.py  send_verification_token.py  update_access_token.py  verify_user.py
access_service/src/access_service/bootstrap/: config.py  di.py
access_service/src/access_service/domain/entities/: access_token.py  refresh_token.py  user.py  verification_token.py
access_service/src/access_service/domain/events/: verification_token.py
access_service/src/access_service/presentation/: lifespan.py  main.py
docker_compose/: kafka.yaml  (+8 more)
message_service/: Dockerfile  pyproject.toml
message_service/src/message_service/bootstrap/: config.py  di.py
message_service/src/message_service/presentation/: main.py
notification_service/: Dockerfile  pyproject.toml
notification_service/src/notification_service/: lifespan.py  main.py
notification_service/src/notification_service/bootstrap/: config.py  di.py
notification_service/src/notification_service/dto/: sms.py
notification_service/src/notification_service/message_broker/: config.py  kafka.py
notification_service/src/notification_service/sms_sender/: base.py  config.py  sms.py
(+97 files in other folders)
